# Algoritmia

./: Pila_archivo.docx
Clases/Clase 1/: Datos Profe -  JP.txt  conceptos.txt
Clases/Clase2/ejercicioMochila/: CMakeLists.txt  main.cpp
Clases/Clase2/ejercicioMochila_miSolu/: CMakeLists.txt  main.cpp
Clases/Clase3/ejercicioReynas/: CMakeLists.txt  main.cpp
Clases/Clase3/ejercicioReynas_miSolu/: CMakeLists.txt  main.cpp
Clases/Clase4/Recursividad_Robot/: CMakeLists.txt
Clases/Clase6/problema_listas/: CMakeLists.txt
Clases/Clase_BusquedaBinaria/: CMakeLists.txt  main.cpp
Clases/Clase_MerchSort/merch_sort/: CMakeLists.txt  main.cpp
Clases/EjerciciosBusquedaBinaria_prof_Sivira/BusquedaBinaria/: CMakeLists.txt  main.cpp
Clases/EjerciciosBusquedaBinaria_prof_Sivira/ejercicio1/: CMakeLists.txt  main.cpp
Clases/EjerciciosBusquedaBinaria_prof_Sivira/ejercicio2/: CMakeLists.txt  main.cpp
Clases/EjerciciosBusquedaBinaria_prof_Sivira/ejercicio3/: CMakeLists.txt  main.cpp
Laboratorios/Lab2/Lab2_2025-1/Pregunta1/CuadrigasFinal/: CMakeLists.txt
Laboratorios/Lab2/Lab2_2025-1/Pregunta1/CuadrigasFinal/CuadrigasFinal/: CMakeLists.txt  main.cpp
Laboratorios/Lab2/Lab2_2025-1/Pregunta1/CuadrigasFinal/CuadrigasFinal/BibliotecaLista/: ElementoLista.h  Lista.h  funcionesLista.cpp
Laboratorios/Lab2/Lab2_2025-1/Pregunta1/ListaSimplementeEnlazada - copia/: CMakeLists.txt
Laboratorios/Lab2/Lab2_2025-1/Pregunta1/ListaSimplementeEnlazada - copia/ListaSimplementeEnlazada/: main.cpp
Laboratorios/Lab2/Lab2_2025-1/Pregunta1/ListaSimplementeEnlazada - copia/ListaSimplementeEnlazada/BibliotecaLista/: ElementoLista.h  Lista.h  funcionesLista.cpp
Laboratorios/Lab2/Lab2_2025-1/Pregunta1/ListaSimplementeEnlazada - copia/ListaSimplementeEnlazada/misFunciones/: FuncionesAuxiliares.cpp  FuncionesAuxiliares.h
Laboratorios/Lab3/Lab3_2025-2_P2/: CMakeLists.txt  main.cpp
Laboratorios/Lab3/Lab3_2025-2_P2/BibliotecaCola/: ElementoCola.h  MisFunciones.cpp  MisFunciones.h  funcionesCola.cpp
TADs/: ArbolBinarioBusqueda_archivo.txt  ArbolBinario_archivo.txt  ColaPrioridad_archivo.docx  Cola_archivo.docx  Lista_archivo.docx
TADs/ArbolBinario/: CMakeLists.txt  main.cpp
TADs/ArbolBinario/BibliotecaArbolBinario/: ArbolBinario.h  ElementoArbolBinario.h  NodoArbolBinario.h  funcionesArbolBinario.cpp  funcionesArbolBinario.h
TADs/ArbolBinarioBusqueda/: CMakeLists.txt  main.cpp
TADs/Cola/: main.cpp
TADs/ColaPrioridad/: CMakeLists.txt  main.cpp
TADs/ListaSimplementeEnlazada/: main.cpp
TADs/Pila/: main.cpp
(+103 files in other folders)
